--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,38 @@
-<header>
-    Page Header
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+
+</header>
+<div class="b-example-divider"></div>
+
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap" />
+                </svg>
+            </a>
+
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/" class="nav-link px-2 text-secondary">CODEG</a></li>
+
+            </ul>
+
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <div class="text-end">
+                <% if(locals.user){ %>
+                    <a href="/users/profile" class="btn btn-outline-light me-2" role="button" aria-disabled="true"><%=user.name %></a>
+                    <a href="/users/sign-out" class="btn btn-warning" role="button" aria-disabled="true">Sign OUT</a>
+                <%}else{ %>
+                    <a href="/users/sign-in" class="btn btn-outline-light me-2" role="button" aria-disabled="true">Sign In</a>
+                    <a href="/users/sign-up" class="btn btn-warning" role="button" aria-disabled="true">Sign Up</a>
+                      <% } %> 
+            </div>
+        </div>
+    </div>
 </header>
