--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,59 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <h1>
     Codeial / <%= title %>
 </h1>
+
+
+<section id= "feed-posts">
+<h4>POST</h4>
+<% if(locals.user){ %> 
+<form action="/posts/create" id="new-post-form" method="POST">
+    <textarea name="content"  cols="30" rows="3" placeholder="type here...."></textarea>
+    <input type="submit" value="POST">
+</form>
+<% } %> 
+
+<div id="posts-list-container">
+    <ul>
+        <% for (post of posts) {%> 
+            <li>
+                <p>
+             <%= post.content %>
+                 <br>
+               <small>
+          <%= post.user.name %>
+              </small> 
+            </p>
+<div class="post-comments">
+    <% if (locals.user){ %>
+        <form action="/comments/create" method="POST">
+            <input type="text" name="content" placeholder="Type Here to add comment...">
+            <input type="hidden" name="post" value="<%= post._id %>">
+            <input type="submit" value="Add Comment">
+        </form>
+
+        <% } %>
+
+        <div class="post-comment-list">
+            <ul id="post-comments-<%= post._id  %> ">
+            <% for(comment of post.comments) {%>
+                <p>
+                    <%= comment.content  %> 
+                    <br>
+                    <small>
+                        <%= comment.user.name  %> 
+                    </small>
+                </p> 
+                <% } %> 
+            </ul>
+
+        </div>
+</div>
+            
+            </li>
+            <% } %> 
+    </ul>
+
+</div>
+</section>
