--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,15 +3,24 @@
         <title>
             <%= title  %>
         </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
+
+        
+        
         <%- style %>
         
     </head>
 
     <body>
         <%- include('_header'); %>
-
-        <%- body %>
+<main id="layout-main">
+<%- body %>
+</main>
+      
 
 
         <%- include('_footer'); %>
