--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,6 @@
-<h1>SIGN UP</h1>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <h1>SIGN UP</h1>
 
 <h1>Sign In</h1>
 <form action="/users/create-session" method="POST">
