--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,1 +1,1 @@
-body{margin:0}#layout-main{height:100%}
+body{margin:100px}#layout-main{height:auto}.alert{padding:20px;background-color:#f44336;color:white;margin-bottom:15px}.closebtn{margin-left:15px;color:white;font-weight:bold;float:right;font-size:22px;line-height:20px;cursor:pointer;transition:0.3s}.closebtn:hover{color:black}
