--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,10 @@
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/layout.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
 
@@ -13,19 +16,47 @@
         
         <%- style %>
         
-    </head>
+  </head>
 
-    <body>
-        <%- include('_header'); %>
-<main id="layout-main">
-<%- body %>
-</main>
-      
+<body>
+    <%- include('_header'); %>
+
+
+
+        <main id="layout-main">
+            <%- body %>
+
+        </main>
 
 
         <%- include('_footer'); %>
 
-        <%- script %>
-        
-    </body>
+            <%- script %>
+
+                <script>
+            <% if (flash.success && flash.success.length > 0) {%>
+                        new Noty({
+                            theme: 'relax',
+                            text: "<%= flash.success %>",
+                            type: 'success',
+                            layout: 'topRight',
+                            timeout: 1500
+
+                        }).show();    
+            <%} %>
+
+            <% if (flash.error && flash.error.length > 0) {%>
+                        new Noty({
+                            theme: 'relax',
+                            text: "<%= flash.error %>",
+                            type: 'error',
+                            layout: 'topRight',
+                            timeout: 1500
+
+                        }).show();    
+            <%} %>
+                </script>
+
+</body>
+
 </html>
