--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,22 +1,34 @@
-<html>
-    
-    <head>
-        <title>
-            <%= title %>
-        </title>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/user_profile.css">
-    </head>
-    
-    <body>
+   
     
         <h1>
             codeg|| <%= title %>
         </h1>
-        <p><%= user.name %> </p>
-        <p><%= user.email %> </p>
-    </body>
+    <% if(user.id==profile_user.id){ %>
+        <!-- if user matches then show the form-->
+        <form action="/users/update/<%= profile_user.id %>" method="POST">
+            <input type="text" name="name" placeholder=" your name" value="<%= profile_user.name %> " required>
+            <input type="text" name="email" placeholder=" your email" value="<%= profile_user.email %> " required>
+            <input type="submit" value="Update">
     
- 
-</html>
+        </form>
+    
+    
+        <% }else{ %>
+            <!-- else show only the profile info-->
+    
+    
+            <p>
+                <%= profile_user.name %>
+            </p>
+            <p>
+                <%= profile_user.email %>
+            </p>
+    
+    
+    
+            <% } %>
+   
