--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -14,8 +14,9 @@
 
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="/users/profile" class="nav-link px-2 text-muted">PROFILE</a></li>
-           
+            <% if(locals.user){ %>
+            <li class="nav-item"><a href="/users/profile/<%=user.id %>" class="nav-link px-2 text-muted">PROFILE</a></li>
+           <% } %> 
         </ul>
     </footer>
 </div>
